[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[features]
performance = ["evmrs/performance"]
mimalloc = ["evmrs/mimalloc"]
stack-array = ["evmrs/stack-array"]
custom-evmc = ["evmrs/custom-evmc"]
hash-cache = ["evmrs/hash-cache"]
code-analysis-cache = ["evmrs/code-analysis-cache"]
thread-local-cache = ["evmrs/thread-local-cache"]
tail-call = ["evmrs/tail-call"]
jumptable-dispatch = ["evmrs/jumptable-dispatch"]
fn-ptr-conversion-expanded-dispatch = [
    "evmrs/fn-ptr-conversion-expanded-dispatch",
]

[dependencies]
evmrs = { path = ".." }
driver = { path = "../driver" }
sha3 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "interpreter"
harness = false
