[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[features]
performance = ["evmrs/performance"]
mimalloc = ["evmrs/mimalloc"]
unsafe-stack = ["evmrs/unsafe-stack"]
custom-evmc = ["evmrs/custom-evmc"]
hash-cache = ["evmrs/hash-cache"]
code-analysis-cache = ["evmrs/code-analysis-cache"]
thread-local-cache = ["evmrs/thread-local-cache"]
alloc-reuse = ["evmrs/alloc-reuse"]
tail-call = ["evmrs/tail-call"]
jumptable-dispatch = ["evmrs/jumptable-dispatch"]
fn-ptr-conversion-expanded-dispatch = [
    "evmrs/fn-ptr-conversion-expanded-dispatch",
]
fn-ptr-conversion-inline-dispatch = ["evmrs/fn-ptr-conversion-inline-dispatch"]

[dependencies]
evmrs = { path = ".." }
driver = { path = "../driver" }
sha3 = "0.10.8"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "interpreter"
harness = false
