[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[features]
performance = ["driver/performance"]
mimalloc = ["driver/mimalloc"]
unsafe-stack = ["driver/unsafe-stack"]
custom-evmc = ["driver/custom-evmc"]
hash-cache = ["driver/hash-cache"]
code-analysis-cache = ["driver/code-analysis-cache"]
thread-local-cache = ["driver/thread-local-cache"]
alloc-reuse = ["driver/alloc-reuse"]
tail-call = ["driver/tail-call"]
jumptable-dispatch = ["driver/jumptable-dispatch"]
fn-ptr-conversion-expanded-dispatch = [
    "driver/fn-ptr-conversion-expanded-dispatch",
]
fn-ptr-conversion-inline-dispatch = ["driver/fn-ptr-conversion-inline-dispatch"]

[dependencies]
common = { path = "../common" }
driver = { path = "../driver" }
sha3 = "0.10.8"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "interpreter"
harness = false
