[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[features]
performance = ["driver/performance"]
mimalloc = ["driver/mimalloc"]
unsafe-stack = ["driver/unsafe-stack"]
custom-evmc = ["driver/custom-evmc"]
hash-cache = ["driver/hash-cache"]
code-analysis-cache = ["driver/code-analysis-cache"]
thread-local-cache = ["driver/thread-local-cache"]
alloc-reuse = ["driver/alloc-reuse"]
tail-call = ["driver/tail-call"]
jumptable-dispatch = ["driver/jumptable-dispatch"]
fn-ptr-conversion-expanded-dispatch = [
    "driver/fn-ptr-conversion-expanded-dispatch",
]
fn-ptr-conversion-inline-dispatch = ["driver/fn-ptr-conversion-inline-dispatch"]

[dependencies]
common = { path = "../common", features = ["mock"] }
driver = { path = "../driver", features = ["mock"] }
libfuzzer-sys = "0.4"
arbitrary = "1.4.1"

[[bin]]
name = "evmc_execute"
path = "fuzz_targets/evmc_execute.rs"
test = false
doc = false
bench = false

[package.metadata]
cargo-fuzz = true
